mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__sanitizer__tests__email_privacy_tester.snap
---
source: mail/mail-html-transformer/src/tests/sanitizer.rs
expression: html
---
<!DOCTYPE html><html lang="en-GB"><head>
      
      
      
      <title>Email Privacy Tester</title>
      
      
      
      
      
      
      
   </head>
   <body>
      <p style="border-bottom:1px solid #000;padding-bottom:1em;">
         <span style="font-size:1.4em;border-bottom:1px solid #333;">Email Privacy Tester</span><br><br>This is your test email from the Email Privacy Tester. Please ignore everything after this line. Clicking on anything will skew the results.
      </p>
      <p style="background-image:url('basebackgroundImage');"></p>
      <p style="content:url('basecssContent');"></p>
      <p style="behavior:url('basecssBehavior') url('basecssBehavior');"></p>
      
      
      <div id="cssEscape"></div>
      
      
         
      
      <span></span><img width="16" height="16" src="baseimg"><img src="#" width="16" height="16"><a href="http://code.anchor-test.ept.emailprivacytester.com"></a>
      
      
      <video src="basevideo" width="1" height="1"></video>
      <video poster="basevideoPoster" width="1" height="1">
         <source src="basevideoMp4" type="video/mp4; codecs=&quot;avc1.4D401E, mp4a.40.2&quot;">
         <source src="basevideoWebm" type="video/webm; codecs=&quot;vp8.0, vorbis&quot;">
         <source src="basevideoOgg" type="video/ogg; codecs=&quot;theora, vorbis&quot;">
      </video>
      <audio src="baseaudio" preload="metadata" width="1" height="1"></audio>
      <span></span><span></span>
      <p style="background-color:expression((document.createElement('img'))['src']=basecssExpression);"></p>
      
         
         
      
      <span></span>
   

</body></html>
