mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__sanitizer__tests__sanitize_styles_always_removes_srcset.snap
---
source: mail/mail-html-transformer/src/tests/sanitizer.rs
expression: result
---
<html><head></head><body><img src="http://localhost/image.jpg" alt="test"></body></html>
