mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__sanitizer__tests__sanitize_styles_no_preserves_style_elements.snap
---
source: mail/mail-html-transformer/src/tests/sanitizer.rs
expression: result
---
<html><head><style>.red {
  color: red;
}
</style></head><body><p>Hello</p></body></html>
