mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__sanitizer__tests__sanitize_styles_yes_removes_data_proton_original_style.snap
---
source: mail/mail-html-transformer/src/tests/sanitizer.rs
expression: result
---
<html><head></head><body><div class="content">Content</div></body></html>
