mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__sanitizer__tests__strip_bad_html.snap
---
source: mail/mail-html-transformer/src/tests/sanitizer.rs
expression: html
---
<html><head>
   </head>
   <body>
      <div>
         <a>foo</a>
         <base target="_blank">bar
      </div>

      

      <style>
         body {color: red;}
      </style>

      
         <div>baz</div>
      
   

</body></html>
