mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__sanitizer__tests__strip_invalid_uris.snap
---
source: mail/mail-html-transformer/src/tests/sanitizer.rs
expression: html
snapshot_kind: text
---
<!DOCTYPE html><html lang="en"><head>
    
    
    <title>Title</title>
    <style>:root {
  --bar: "/tmp/foo.png";
  --foo: --bar;
  --url: --foo;
  --inline: "";
}

body {
  background: #00d url("https://mdn.github.io/shared-assets/images/examples/leopard.jpg") no-repeat fixed;
}

ul {
  list-style: url("cid:css223232");
}

div {
}

div > ul {
  list-style: url("data:image/png;base63,AAA==");
}

tr > ul {
  list-style: url("");
}

div {
  background: image-set(var(--url) 1x) center / cover no-repeat;
}
</style>
</head>
<body>
<img>
<a>foo</a>
<img src="http://foo@bar.com">
<img alt="" src="data:image/png;base64,iVBORw0KGgoAAA
ANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4
//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU
5ErkJggg==" style="width: 36pt; height: 36pt">
<img src="https://foo_bar.com/img.png">
<img>

<blockquote cite="http://www.google.com">foo</blockquote>
<blockquote>foo</blockquote>


    <button>foo</button>


<div style=""> invalid_css_style</div>;
<div style="background: url(&quot;https://foo.bar.com/img.png&quot;)"> valid_css_style</div>;

<img>
<img src="cid:CE85EADC-1A1B-4730-BE51-610011D32B8C">
<img src="cid:16eff55b@proton.ch">
<img>
<img src="cid:rere-.tt-ton@ch">
<video>cid_invalid</video>
<div style="background: image-set(var(--inline) 1x) center / cover no-repeat">
    inline image set
</div>

<video>invalid_url</video>


</body></html>
