mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__sanitizer__tests__style_elements_are_stripped_away.snap
---
source: mail/mail-html-transformer/src/tests/sanitizer.rs
expression: html
---
<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
    <!--[if gte mso 9]>
    <xml>
        <o:OfficeDocumentSettings>
            <o:AllowPNG/>
            <o:PixelsPerInch>96</o:PixelsPerInch>
        </o:OfficeDocumentSettings>
    </xml><![endif]-->
    <title>DHL</title>
    
    
    
    
    <!-- Header_Banner_Section -->
    <!-- //Header_Banner_Section -->
    <!-- Bg_Color_Section -->
    <!-- //Bg_Color_Section -->
    <!-- Cta_Section -->
    <!-- //Cta_Section -->
    <!-- Height_Section -->
    <!-- //Height_Section -->
    
    <!--[if gte mso 9]>
    <style type="text/css">
        .none {
            display: none !important;
        }

        .block {
            display: block !important;
            text-align: center !important;
        }

        .em_outlooksol {
            mso-hide: all !important;
            overflow: hidden !important;
            max-height: 0 !important;
            width: 0 !important;
            display: none !important;
            line-height: 0 !important;
            max-width: 0 !important;
        }
    </style>
    <![endif]-->
</head>
<body class="em_body" style="margin:0px auto; padding:0px;" bgcolor="#ffffff">

<div id="emailPreHeader" style="mso-hide:all; visibility:hidden; opacity:0; color:transparent; mso-line-height-rule:exactly; line-height:0; font-size:0px; overflow:hidden; border-width:0; display:none !important;">
    Think global with DHL
</div>
<!-- == Body Section == -->

</body></html>
